kubernetes/yaml/http-upstream.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-upstream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-upstream
  template:
    metadata:
      labels:
        app: http-upstream
    spec:
      containers:
        - name: http-upstream
          image: quay.io/rlehmann/upstream:latest
          ports:
            - containerPort: 50001
---
apiVersion: v1
kind: Service
metadata:
  name: http-upstream
spec:
  selector:
    app: http-upstream
  ports:
    - protocol: TCP
      port: 50001
      targetPort: 50001

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-upstream-route
spec:
  parentRefs:
    - name: external-gateway
  hostnames:
    - "http.172.17.0.100.sslip.io"
  rules:
    - backendRefs:
        - name: http-upstream
          port: 50001
